--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app" class="container"></div>
 </body>
 </html>
